[tool.poetry]
name = "executive-functioning"
version = "0.1.0"
description = "Agenda and goal setting app"
authors = ["Kano Marvel <knmarvel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
